(executable
 (name hello)
 (public_name choku-hello)
 (modules hello)
 (libraries choku eio_main))

(executable
 (name upload_streaming)
 (public_name choku-upload-streaming)
 (modules upload_streaming)
 (libraries choku eio_main))

(executable
 (name client_fetch)
 (modules client_fetch)
 (libraries choku eio_main mirage-crypto-rng.unix))

(executable
 (name reverse_proxy)
 (modules reverse_proxy)
 (libraries choku eio_main mirage-crypto-rng.unix))

(executable
 (name reverse_proxy_rewrite)
 (modules reverse_proxy_rewrite)
 (libraries choku eio_main mirage-crypto-rng.unix))
