(tests
 (names
  test_method
  test_headers
  test_status
  test_body
  test_request
  test_response
  test_cookie
  test_form
  test_query
  test_multipart
  test_handler
  test_middleware
  test_request_head
  test_choku_test
  test_client
  test_router
  test_http1
  test_server)
 (libraries
  choku
  choku.test
  alcotest
  eio
  eio_main
  unix
  mirage-crypto-rng.unix))
